test/parser/Queries/syntax_errors/fail_K-ForExprWithout-50.xq
(:**** where ****foo** where *foo**** ne *********** where ******foo***************** for * for *****:) let 
(: Test:K-ForExprWithout-50   $   foo     $    for     eq               :)
(:Written by:  for Frans for  Englich         ne    foo              eq    :)
: Date: 2006-10-05T18:29:37+02:00 $    for            $        :)
(: Purpose: Ensure scanners/parsers accept small QNames  for-expressions. :)
(:********* for * let foo************ eq ************ for *** eq ************ eq ****:)
1 eq (for $a in 1 return $a)